--- a/src/.circleci/config.yml
+++ b/src/.circleci/config.yml
@@ -5,7 +5,9 @@ jobs:
       - image: ocaml/opam:debian-stable_ocaml-4.06.0
     steps:
       - checkout
-      - opam install ounit core sexplib xml-light camlon ppx_inline_test ppx_deriving.show
+      - run:
+      	name: Setup
+	command: opam install ounit core sexplib xml-light camlon ppx_inline_test ppx_deriving.show
       - run:
           name: Run tests
           command: jbuilder build @runtest @install
