--- a/flask/package.json
+++ b/flask/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "react": "^16.7.0",
+    "react-ace": "^6.3.2",
     "react-dom": "^16.7.0",
     "superagent": "^4.1.0"
   }
