--- a/flask/package.json
+++ b/flask/package.json
@@ -19,6 +19,7 @@
     "jquery.fancytree": "",
     "less": "^3.0.0",
     "less-loader": "",
+    "mousetrap": "^1.6.2",
     "react": "^16.7.0",
     "react-ace": "^6.3.2",
     "react-dom": "^16.7.0",
