--- a/flask/package.json
+++ b/flask/package.json
@@ -14,6 +14,7 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
+    "bootstrap": "",
     "css-loader": "",
     "file-loader": "",
     "jquery.fancytree": "",
@@ -22,6 +23,7 @@
     "mousetrap": "^1.6.2",
     "react": "^16.7.0",
     "react-ace": "^6.3.2",
+    "react-bootstrap": "",
     "react-dom": "^16.7.0",
     "style-loader": "",
     "superagent": "^4.1.0"
